# cuda-raytracer

./: .gitignore  CMakeLists.txt  FinalReport.md  Progress.md  Progress2.md  Proposal.md  README.md  constructors.cpp  importer_stuff.cpp  ray.cu  structs.cpp
shapeImport/: CMakeLists.txt  README.md  corgi.stl  demo.cpp
